--- a/Le1Amenzas.html
+++ b/Le1Amenzas.html
@@ -37,11 +37,11 @@
 			          <li><a href="index.html">inicio</a></li>
 	                  <li class="active"><a href="Lecturas.html">Lecturas</a> <!--EL li Class="active, ES PARA ACTIVAR EL EFECTO DE LOS BOTONES" -->
 										<ul class="nav nav-sudmenu">
-												 <li><a href="">AMENAZAS INFORMATICAS</a></li>
-												 <li><a href="Le2Vulnerabilidades.html">VULNERABILIDADES</a></li>
-												 <li><a href="Le3Analisis.html">ANALISIS DE RIESGOS</a></li>
-												 <li><a href="Le4Riesgos.html">RIESGOS</a></li>
-												 <li><a href="Le5Ataques.html">TIPOS DE ATAQUES INFORMATICOS</a></li>
+											<li><a href="">Amenazas informáticas</a></li>
+											<li><a href="Le2Vulnerabilidades.html">Vulnerabilidades</a></li>
+											<li><a href="Le3Analisis.html">Análisis de riesgos</a></li>
+											<li><a href="Le4Riesgos.html">Riesgos</a></li>
+											<li><a href="Le5Ataques.html">Tipos de ataques informáticos</a></li>
 												</ul>
 											 </li>
 
@@ -54,9 +54,9 @@
 
 			 			          <li><a href="Actividades.html">Actividades</a>
 			 								<ul class="nav nav-sudmenu">
-			 										 <li><a href="">Submenu1</a></li>
-			 										 <li><a href="">Submenu2</a></li>
-			 										 <li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>
+												<li><a href="Ac2Educa.html">Actividad 1</a></li>
+											 <li><a href="Ac3Educa.html">Actividad 2</a></li>
+											 <li><a href="Ac1Aprendiendo.html">Aprendiendo Jugando</a></li>i>
 			 										</ul>
 			 									 </li>
 
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
