--- a/Ac1Aprendiendo.html
+++ b/Ac1Aprendiendo.html
@@ -36,11 +36,11 @@
 
 								<li><a href="Lecturas.html">Lecturas</a> <!--A este se le quita el <li> para que tenga subitems -->
 									<ul class="nav nav-sudmenu">
-										<li><a href="Le1Amenzas.html">Amenazas informáticas</a></li>
-										 <li><a href="Le2Vulnerabilidades.html">Vulnerabilidades</a></li>
-										 <li><a href="Le3Analisis.html">Análisis de riesgos</a></li>
-										 <li><a href="Le4Riesgos.html">Riesgos</a></li>
-										 <li><a href="Le5Ataques.html">Tipos de ataques informáticos</a></li>
+									<li><a href="Le1Amenzas.html">Amenazas informáticas</a></li>
+									 <li><a href="Le2Vulnerabilidades.html">Vulnerabilidades</a></li>
+									 <li><a href="Le3Analisis.html">Análisis de riesgos</a></li>
+									 <li><a href="Le4Riesgos.html">Riesgos</a></li>
+									 <li><a href="Le5Ataques.html">Tipos de ataques informáticos</a></li>
  									</ul>
  								 </li>
 
@@ -53,9 +53,9 @@
 
 			           <li class="active"><a href="Actividades.html">Actividades</a>
 								 <ul class="nav nav-sudmenu">
-								 		 <li><a href="">Submenu1</a></li>
-								 		 <li><a href="">Submenu2</a></li>
-								 		 <li><a href="">Aprendiendo Jugando</a></li>
+									 <li><a href="Ac2Educa.html">Actividad 1</a></li>
+									 <li><a href="Ac3Educa.html">Actividad 2</a></li>
+									 <li><a href="">Aprendiendo Jugando</a></li>i>
 								 		</ul>
 								 	 </li>
 
@@ -125,3 +125,4 @@
 
 </body>
 </html>
+
