--- a/Ac2Educa.html
+++ b/Ac2Educa.html
@@ -36,11 +36,11 @@
 
 								<li><a href="Lecturas.html">Lecturas</a> <!--A este se le quita el <li> para que tenga subitems -->
 									<ul class="nav nav-sudmenu">
-										<li><a href="Le1Amenzas.html">AMENAZAS INFORMATICAS</a></li>
- 									 <li><a href="Le2Vulnerabilidades.html">VULNERABILIDADES</a></li>
- 									 <li><a href="Le3Analisis.html">ANALISIS DE RIESGOS</a></li>
- 									 <li><a href="Le4Riesgos.html">RIESGOS</a></li>
- 									 <li><a href="Le5Ataques.html">TIPOS DE ATAQUES INFORMATICOS</a></li>
+										<li><a href="Le1Amenzas.html">Amenazas informáticas</a></li>
+										 <li><a href="Le2Vulnerabilidades.html">Vulnerabilidades</a></li>
+										 <li><a href="Le3Analisis.html">Análisis de riesgos</a></li>
+										 <li><a href="Le4Riesgos.html">Riesgos</a></li>
+										 <li><a href="Le5Ataques.html">Tipos de ataques informáticos</a></li>
  									</ul>
  								 </li>
 
