--- a/Autores.html
+++ b/Autores.html
@@ -128,19 +128,19 @@
 														<div class="col-md-3">
 															<h3></h3>
 															<a href="images/sinfoto.jpg">
-																<img src="images/sinfoto.jpg"
+																<img src="images/NICOLAS.jpg"
 																						 class="img-responsive" width="740" height="840">
 																</a>
 															</div>
 
 															<div class="col-md-3">
 																	<div class="section_box">
-																		<h4><center>NNNNNNN NNNNNN NNNNN</center></h4>
-																			<p><B>Código:</b> xxxxxxxxx</p>
-																			<p><b>Contacto:</b> @gmail.com</p>
+																		<h4><center>NICOLAS FELIPE CASTANEDA</center></h4>
+																			<p><B>Código:</b>Pendiente</p>
+																			<p><b>Contacto:</b>Pendiente</p>
 																			<p><b>Locación:</b> Acacias </p>
 																			<p><b>Universidad:</b> Unad_Cead_Acacias</p>
-																			<p ><b>Skype:</b> NNNNNNNN</p>
+																			<p ><b>Skype:</b>Pendiente</p>
 																			<p><b>Estudiante:</b> Ingenieria de sistemas</p>
 																	</div>
 																	</div>
